--- a/css/table.css
+++ b/css/table.css
@@ -4,7 +4,9 @@
     text-align: center;
     padding-top: 100px;
 }
-
+.submittt{
+    
+}
 #Sec h2, #Sec2 h2, #Sec3 h2, #Sec4 h2{
     font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
